# srdcheck

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  glama.json  llms.txt  pyproject.toml  server.json  tool.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
bench/: LEADERBOARD.md  README.md  coverage.py  drift_gen.py  drift_noisy.py  harness.py  scorecard.json  scorecard.md
docs/: adapter-spec.md  anatomy-of-a-turn.md  atom-concordance.json  atom-concordance.md  product-truths.md
eval/: PROTOCOL.md  RESULTS-phase0.md  questions.jsonl  run.py  score.py
scripts/: cold_start_live.py  concordance.py  srd_index.py  truth_scorecard.py
sources/: README.md  extract.py  fetch.sh
srdcheck/: __init__.py  access.py  adapter.py  cli.py  engine.py  lineage.py  mcp.py  verdict.py
srdcheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_bench.py  test_bootstrap.py  test_checks.py  test_citation_fidelity.py  test_combat_resolution.py  test_concordance.py  test_condition_completeness.py  test_coverage_census.py  test_creature_queries.py  test_creature_registry.py  test_drift_gen.py  test_drift_noisy.py  test_edition_check.py  test_encounter_budget.py  test_enumeration.py  test_extraction_completeness.py  test_grapple.py  test_help_action.py  test_input_sanitation.py  test_kernel.py  test_ledger.py  test_mcp.py  test_opportunity_attack.py  test_passive_perception.py  test_public_api.py  test_roll_modifiers.py  test_srd_5_1_adapter.py  test_submissions.py  test_toy_adapter.py  (+1 more)
(+62 files in other folders)
